--- a/Time series forecast.ipynb
+++ b/Time series forecast.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "# Loading the stocks data\n",
-    "stocks_data = pd.read_csv(r\"C:\\Users\\daksh\\Desktop\\Project\\stocks.csv\")"
+    "stocks_data = pd.read_csv(r\"stocks.csv\")"
    ]
   },
   {
